# NEMO-sensors

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  run_tests.py
NEMO_sensors/: admin.py  api.py  apps.py  evaluators.py  models.py  sensors.py  urls.py  views.py
NEMO_sensors/management/commands/: manage_sensor_data.py
NEMO_sensors/static/NEMO_sensors/: chartjs-adapter-moment.js
NEMO_sensors/static/sensors/: chartjs-adapter-moment.js
NEMO_sensors/templates/NEMO_sensors/: sensor_data.html  sensors.html
NEMO_sensors/templates/customizations/: customizations_sensors.html
NEMO_sensors/tests/: test_modbus_sensors.py  test_settings.py
resources/fixtures/: splash_pad_sensors.json
